circlebadge: also fix icon visibility in large icon re: #852
URL: https://github.com/marketplace/pullapprove

--- a/github-dark.css
+++ b/github-dark.css
@@ -3739,7 +3739,7 @@
     background: #343434 !important;
   }
   /* Exclude problematic CircleBadge-icon issue #852 */
-  .CircleBadge[style*="background-color: #ffffff"] img[src*="3919?s=62&v=4"] {
+  .CircleBadge[style*="background-color: #ffffff"] img[src*="3919"] {
     filter: brightness(250%) !important;
   }
   .hidden-text-expander a, .profile-timeline-month-heading:after,
